--- a/Statistical Computing /Assignment 1/Assignment 1/Prac 2.qmd
+++ b/Statistical Computing /Assignment 1/Assignment 1/Prac 2.qmd
@@ -1,8 +1,9 @@
 ---
-title: "Practical 2"
+title: "Prac 2"
 format: html
-editor: visual
 ---
+
+# Practical 2
 
 # Practical 2
 
@@ -29,7 +30,6 @@ sim_data <- data.frame(x, y)
 # Plot the simulated data
 plot(x, y, main = "Simulated Noisy Sine Wave", xlab = "x", ylab = "y", pch = 16, col = "blue")
 lines(x, sin(x / 10), col = "red", lwd = 2) # True sine function for reference
-
 ```
 
 ## Question 2
@@ -78,12 +78,11 @@ lines(x, y_smooth, col = "red", lwd = 2)  # Smoothed curve
 lines(x, sin(x / 10), col = "green", lwd = 2, lty = 2)  # True function
 legend("topright", legend = c("Noisy Data", "Smoothed LOWESS", "True Function"),
        col = c("blue", "red", "green"), pch = c(16, NA, NA), lty = c(NA, 1, 2))
-
 ```
 
 ## Question 3
 
-### **Compare with R’s Built-in `lowess()`:**
+### **Compare with R’s Built-in `lowess()`:**
 
 ```{r}
 # Set seed for reproducibility
@@ -116,5 +115,4 @@ lines(x, sin(x / 10), col = "black", lwd = 2, lty = 3)
 legend("topright", legend = c("Noisy Data", "Custom LOWESS", "Built-in lowess", "True Function"),
        col = c("blue", "red", "green", "black"), pch = c(16, NA, NA, NA), 
        lty = c(NA, 1, 2, 3), lwd = c(NA, 2, 2, 2))
-
 ```
